# robstride_driver

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml  ruff.toml
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  lint.yml  release.yml
cmake/: robstride_driverConfig.cmake.in
docs/: architecture.md  background.md  hardware.md  protocol.md  setup.md  test_results.md
examples/: CMakeLists.txt  tracking_capture.cpp  tracking_capture_common.hpp  tracking_capture_current.cpp  tracking_capture_operation.cpp  tracking_capture_position.cpp  tracking_capture_pp.cpp  tracking_capture_velocity.cpp  velocity_control.cpp
include/robstride_driver/: actuator_types.hpp  at_serial_can_interface.hpp  can_interface.hpp  position_unwrapper.hpp  protocol.hpp  robstride_driver.hpp  robstride_motor.hpp  socket_can_interface.hpp  stub_can_interface.hpp
src/: at_serial_can_interface.cpp  protocol.cpp  robstride_motor.cpp  socket_can_interface.cpp  stub_can_interface.cpp
tests/: .clang-tidy  CMakeLists.txt  test_at_serial_framing.cpp  test_position_unwrapper.cpp  test_protocol.cpp  test_robstride_motor.cpp  test_stub_can_interface.cpp
tests/fixtures/: at_serial_samples.hpp  can_bus.hpp
tools/: plot_tracking.py
